fix layout bugs in new ver

--- a/source/color-scheme.scss
+++ b/source/color-scheme.scss
@@ -29,7 +29,7 @@ html[data-theme="dark"] {
   --ls-block-ref-link-text-color: #73d2f6;
   --ls-search-background-color: var(--ls-primary-background-color);
   --ls-border-color: #3f3f3f;
-  --ls-menu-hover-color: var(--ls-table-tr-even-background-color);
+  --ls-menu-hover-color: #36383b;
   --ls-primary-text-color: #ccc;
   --ls-secondary-text-color: #aaa;
   --bf-strong-text-color: #dddddd;
@@ -52,8 +52,8 @@ html[data-theme="dark"] {
   --ls-block-bullet-border-color: #ffffff14;
   --ls-block-bullet-color: #ffffff25;
   --ls-guideline-color: #ffffff14;
-  --ls-block-highlight-color: #fbfbfb23;
-  --ls-selection-background-color: #64b4ff81;
+  --ls-block-highlight-color: #3e3e41;
+  --ls-selection-background-color: #3e3e41;
   --ls-page-checkbox-color: #5c94ce;
   --ls-page-checkbox-border-color: var(--ls-primary-background-color);
   --ls-page-blockquote-border-color: var(--ls-primary-text-color);
