--- a/source/theme-white.scss
+++ b/source/theme-white.scss
@@ -52,4 +52,8 @@
       }
     }
   }
+
+  .ui__modal-panel {
+    background-color: var(--ls-primary-background-color);
+  }
 }
